05_subnet.tf
#Create subnets in VNet
resource "azurerm_subnet" "mgmt" {
    name                      = "${var.mgmtSubnetName}"
    resource_group_name       = "${var.rg_name}"
    address_prefix            = "${var.mgmtSubnet}"
    virtual_network_name      = "${azurerm_virtual_network.vnet.name}"
    network_security_group_id = "${azurerm_network_security_group.mgmt-nsg.id}"

}

resource "azurerm_subnet" "trust" {
    name                      = "${var.trustSubnetName}"
    resource_group_name       = "${var.rg_name}"
    address_prefix            = "${var.trustSubnet}"
    virtual_network_name      = "${azurerm_virtual_network.vnet.name}"
    network_security_group_id = "${azurerm_network_security_group.FwInt-Nsg.id}"
    depends_on                = ["azurerm_virtual_network.vnet" ,
                                 "azurerm_network_security_group.FwInt-Nsg"]
}

resource "azurerm_subnet" "app1" {
    name                      = "${var.app1SubnetName}"
    resource_group_name       = "${var.rg_name}"
    address_prefix            = "${var.app1Subnet}"
    virtual_network_name      = "${azurerm_virtual_network.vnet.name}"
    network_security_group_id = "${azurerm_network_security_group.App-Nsg.id}"
    route_table_id            = "${azurerm_route_table.app1RT.id}"
    depends_on                = ["azurerm_virtual_network.vnet" ,
                                 "azurerm_route_table.app1RT" ,
                                 "azurerm_network_security_group.App-Nsg" ]
}

resource "azurerm_subnet" "app2" {
    name                      = "${var.app2SubnetName}"
    resource_group_name       = "${var.rg_name}"
    address_prefix            = "${var.app2Subnet}"
    virtual_network_name      = "${azurerm_virtual_network.vnet.name}"
    network_security_group_id = "${azurerm_network_security_group.App-Nsg.id}"
    route_table_id            = "${azurerm_route_table.app2RT.id}"
    depends_on                = ["azurerm_virtual_network.vnet" ,
                                 "azurerm_route_table.app2RT" ,
                                 "azurerm_network_security_group.App-Nsg" ]
}
